--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.password=
+
+
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -14,3 +24,5 @@ spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
 #security.user.name=admin
 #security.user.password=pass
+
+
